# pdf-renamer

./: .gitignore  CLAUDE.md  README.md  electron.vite.config.ts  package-lock.json  package.json  requirements.txt  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
app/: __init__.py  file_utils.py  logging_utils.py  main.py  main_window.py  models.py  openai_client.py  settings_store.py  workers.py
config/: settings.json
electron/: main.ts  preload.ts
electron/services/: document-controller.ts  document-store.ts  env.ts  openai-analyzer.ts  settings.ts
renderer/: astro.config.mjs  tsconfig.json
renderer/src/components/: App.tsx
renderer/src/pages/: index.astro
renderer/src/styles/: global.css
scripts/: normalize-renderer-paths.mjs
shared/: naming.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  naming.rs  types.rs
src-tauri/src/services/: document_controller.rs  document_store.rs  mod.rs  openai_analyzer.rs  settings.rs
src/main/: index.ts
src/main/services/: document-controller.ts  document-store.ts  logger.ts  openai-analyzer.ts  settings.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx  styles.css
tests/: document-controller.test.ts  env.test.ts  naming.test.ts  settings.test.ts
