[package]
name = "pdf-renamer"
version = "2.0.0"
description = "PDF Renamer desktop application"
authors = []
license = ""
edition = "2021"

[lib]
name = "pdf_renamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
anyhow = "1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
lopdf = "0.34"
regex = "1"
unicode-normalization = "0.1"
indexmap = "2"
